--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ transcriber = { git = "https://github.com/nickrallison/transcriber.git" }
 clap = { version = "4.5.23", features = ["derive"] }
 thiserror = "2.0.6"
 serde_json = "1.0.133"
+lazy_static = "1.5.0"
+deunicode = "1.6.0"
+regex = "1.11.1"
